--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-alpha02'
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0'
 }
